<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.screens.hoteldetails.HotelDetailsFragment">

        <ImageView
            android:id="@+id/hotel_photo_image_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hotel_name_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/hotel_name_placeholder"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/hotel_address_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/star_1_image_view" />

        <TextView
            android:id="@+id/hotel_address_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/hotel_address_placeholder"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/distance_from_center_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotel_name_text_view" />

        <TextView
            android:id="@+id/distance_from_center_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/hotel_distance_from_center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotel_address_text_view"
            tools:text="@string/hotel_distance_from_center_placeholder" />

        <ImageView
            android:id="@+id/star_1_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toTopOf="@id/hotel_name_text_view"
            app:layout_constraintEnd_toStartOf="@id/star_2_image_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hotel_photo_image_view"
            app:srcCompat="@android:drawable/star_on" />

        <ImageView
            android:id="@+id/star_2_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintStart_toEndOf="@id/star_1_image_view"
            app:layout_constraintTop_toBottomOf="@+id/hotel_photo_image_view"
            app:srcCompat="@android:drawable/star_on" />

        <ImageView
            android:id="@+id/star_3_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintStart_toEndOf="@id/star_2_image_view"
            app:layout_constraintTop_toBottomOf="@+id/hotel_photo_image_view"
            app:srcCompat="@android:drawable/star_on" />

        <ImageView
            android:id="@+id/star_4_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintStart_toEndOf="@id/star_3_image_view"
            app:layout_constraintTop_toBottomOf="@+id/hotel_photo_image_view"
            app:srcCompat="@android:drawable/star_on" />

        <ImageView
            android:id="@+id/star_5_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:layout_constraintStart_toEndOf="@id/star_4_image_view"
            app:layout_constraintTop_toBottomOf="@+id/hotel_photo_image_view"
            app:srcCompat="@android:drawable/star_on" />

        <TextView
            android:id="@+id/rooms_available_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/hotel_available_rooms"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/distance_from_center_text_view" />

        <TextView
            android:id="@+id/latitude_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/hotel_latitude"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rooms_available_text_view" />

        <TextView
            android:id="@+id/longitude_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/hotel_longitude"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latitude_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
